Fix wrong size for textarea in popup with Chrome

--- a/chickpea/static/chickpea/css/chickpea.css
+++ b/chickpea/static/chickpea/css/chickpea.css
@@ -75,6 +75,14 @@
     /*box-shadow: 4px 8px 6px -3px black;*/
 }
 
+/* ***** */
+/* Popup */
+/* ***** */
+.leaflet-popup-content textarea {
+    width: 100%;
+    min-width: 300px;
+}
+
 /* ******** */
 /* Modalbox */
 /* ******** */
